# colabsh

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  cliff.toml  codecov.yml  junit.xml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: autofix.yml  ci.yml  docs.yml  release.yml
docs/: architecture.md  commands.md  configuration.md  contributing.md  headless.md  index.md  installation.md  reference.md  security.md
info_checks/: colab_info.py
src/colabsh/: __about__.py  commands.py  constants.py  history.py  main.py
src/colabsh/core/: browser.py  cells.py  config.py  history.py  models.py  output.py  proxy.py  qr.py  repl.py  server.py
tests/: __init__.py  conftest.py  test_browser.py  test_cells.py  test_config.py  test_history_cli.py  test_history_core.py  test_main.py  test_output.py  test_qr.py
